# shunting-yard

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  calc.c  config.h  configure.ac  shunting-yard.c  shunting-yard.h  stack.c  stack.h  tests.c
src/: calc.c  shunting-yard.c  shunting-yard.h  stack.c  stack.h
tests/: shunting-yard.c  test-shunting-yard.c
