AC_INIT([Shunting Yard], 0.1, [https://github.com/bmars/shunting-yard/issues],
        [], [https://github.com/bmars/shunting-yard])
AC_CONFIG_AUX_DIR(build-aux)
AC_CONFIG_MACRO_DIR(m4)
AM_INIT_AUTOMAKE([foreign dist-xz no-dist-gzip subdir-objects -Wall -Werror])
AM_SILENT_RULES(yes)

AC_PROG_CC_C99
AX_APPEND_COMPILE_FLAGS([-Wall -Wextra -Werror])

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
